# stdui

./: .gitattributes  CMakeLists.txt  README.md  install.sh  main.c  test.c  window.h
.github/workflows/: c-cpp.yml  cmake-multi-platform.yml
docs/: main.c
install/: CMakeLists.txt
stdui/: colors.h  image.h  widgets.h  window.h
stdui/internal/: font.h  layout.h  stdui_types.h  utils.h  widgets_ext.h
